--- a/bio.html
+++ b/bio.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@100..900&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -16,20 +16,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <script src="sweetalert2.min.js"></script>
-  <link rel="stylesheet" href="sweetalert2.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="api.js"></script>
+  
+  
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -181,7 +173,7 @@ window.onload = loadAllRecords;
 
 
 function loadAllRecords() {
-  const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${rangesheet1}?key=${apiKey}`;
+  const url = `https://script.google.com/macros/s/AKfycbw_K7VI0Bz5Tolfx4VfMPEz6BQ7FwXo0vV2JPXmAB3Dbf587fX8K1tdIvoAA-8kiAgW5Q/exec`;
 
   fetch(url)
     .then(response => response.json())
@@ -194,22 +186,22 @@ function loadAllRecords() {
       resultDiv1.innerHTML = ''; // เคลียร์ผลลัพธ์ก่อนแสดงใหม่
 
       data.values.forEach(row => {
-        if (row[67] == selectedValue) {  // ตรวจสอบค่าใน row[73] ว่าตรงกับ selectedValue หรือไม่
+        if (row.customer == selectedValue) {  // ตรวจสอบค่าใน row[73] ว่าตรงกับ selectedValue หรือไม่
           resultDiv1.innerHTML += ` 
             <tr>
-              <th class="text-center" scope="row" colspan="2">${row[0]}</th>
-              <td colspan="3">${row[1]}</td>
-              <td class="text-center">${row[2]}</td>
-              <td class="text-center">${row[3]}</td>
-              <td class="text-center">${row[4]}</td>
-              <td class="text-center">${row[5]}</td>
-              <td class="text-center">${row[38]}</td>
-              <td class="text-center">${row[35]}</td>
-              <td class="text-center">${row[36]}</td>
-              <td class="text-center">${row[39]}</td>
-              <td class="text-center">${row[40]}</td>
-              <td class="text-center">${row[41]}</td>
-             
+              
+              <th class="text-center" scope="row" colspan="2">${row.register}</th>
+              <td colspan="3">${row.name}</td>
+              <td class="text-center">${row.age}</td>
+              <td class="text-center">${row.sex}</td>
+              <td class="text-center">${row.waigh}</td>
+              <td class="text-center">${row.tall}</td>
+              <td class="text-center">${row.lung}</td>
+              <td class="text-center">${row.eyes}</td>
+              <td class="text-center">${row.ear}</td>
+              <td class="text-center">${row.hand}</td>
+              <td class="text-center">${row.leg}</td>
+              <td class="text-center">${row.back}</td>
             </tr>
           `;
         }
@@ -232,11 +224,7 @@ window.onresize = checkScreenSize;
 
 </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@Popperjs/core@2.11.8/dist/umd/Popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>   
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
