--- a/bio.html
+++ b/bio.html
@@ -180,7 +180,7 @@
 
            </tbody>
     </table>
-  <div class="modal-loading">
+  <div class="modal-loading" style="display: none;">
     
   <svg class="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="200" height="200" style="shape-rendering: auto; display: block; background: rgb(255, 255, 255);"><g><g transform="rotate(0 50 50)">
   <rect fill="#71fe8c" height="12" width="6" ry="6" rx="3" y="24" x="47">
@@ -241,6 +241,7 @@
 
 
 function loadAllRecords() {
+  openLoading();   
     const url = "https://script.google.com/macros/s/AKfycbza6a827EUSt4AjpTtvWJV2Rc3ERhA7HbRY0ftd10NKqKd0IKiFRHJ13qQhe56kO5G0sA/exec";
 
     fetch(url)
@@ -296,7 +297,13 @@ function loadAllRecords() {
   function hideLoading(){
   $("#loading").css('display','none');
 }
+function openLoading {
+  $(".modal-loading").css('display' , 'flex');
+}
 
+  function closeLoading {
+  $(".modal-loading").css('display' ,  'none');
+  }
 
 // ✅ เรียกใช้งานเมื่อหน้าเว็บโหลดเสร็จ
 window.onload = loadAllRecords;
