--- a/bio.html
+++ b/bio.html
@@ -180,7 +180,7 @@
 
            </tbody>
     </table>
-  <div class="modal-loading" style="display: none;">
+  <div class="modal-loading">
     
   <svg class="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="200" height="200" style="shape-rendering: auto; display: block; background: rgb(255, 255, 255);"><g><g transform="rotate(0 50 50)">
   <rect fill="#71fe8c" height="12" width="6" ry="6" rx="3" y="24" x="47">
@@ -291,18 +291,18 @@ function loadAllRecords() {
         .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
-  hideLoading();
+  closeLoading();
 }
 
   function hideLoading(){
   $("#loading").css('display','none');
 }
-function openLoading {
-  $(".modal-loading").css('display' , 'flex');
+function openLoading() {
+  $('.modal-loading').css('display','flex');
 }
 
-  function closeLoading {
-  $(".modal-loading").css('display' ,  'none');
+  function closeLoading() {
+  $('.modal-loading').css('display','none');
   }
 
 // ✅ เรียกใช้งานเมื่อหน้าเว็บโหลดเสร็จ
