--- a/bio.html
+++ b/bio.html
@@ -153,7 +153,7 @@
     </header>
    
 <div class="container-md" style="font-family: sarabun;">
-    <h class="fs-5 mt-2 mb-2">ตารางแสดงผลการทดสอบด้านชีวอนามัย</h>
+    <h id="loading" class="fs-5 mt-2 mb-2"></h>
     <table class="table table-result mt-3">
        <head>
         <thead class="table-success">
@@ -241,7 +241,8 @@
 
 
 function loadAllRecords() {
-    
+   const loading = document.getElementById('loading');
+         loading.innerText="Waiting for loading......";
     const url = "https://script.google.com/macros/s/AKfycbza6a827EUSt4AjpTtvWJV2Rc3ERhA7HbRY0ftd10NKqKd0IKiFRHJ13qQhe56kO5G0sA/exec";
 
     fetch(url)
@@ -291,6 +292,7 @@ function loadAllRecords() {
         .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
+   loading.innerText="";
   closeLoading();
 }
 
