--- a/bio.html
+++ b/bio.html
@@ -153,7 +153,7 @@
     </header>
    
 <div class="container-md" style="font-family: sarabun;">
-    <h id="loading" class="fs-5 mt-2 mb-2"></h>
+    <span id="loading" class="fs-5 mt-2 mb-2"></span>
     <table class="table table-result mt-3">
        <head>
         <thead class="table-success">
@@ -288,11 +288,12 @@ function loadAllRecords() {
                     `;
                 }
             });
+          loading.innerText="";
         })
         .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
-   loading.innerText="";
+   
   closeLoading();
 }
 
